--- a/05-Rules/www/components/home/home.html
+++ b/05-Rules/www/components/home/home.html
@@ -1,12 +1,12 @@
 <ion-view view-title="Auth0 Ionic Quickstart" ng-controller="HomeController as vm">
   <ion-content class="padding">
-    <div ng-hide="vm.auth.isAuthenticated">
+    <div ng-hide="isAuthenticated">
       <p>Welcome to the Auth0 Ionic Sample! Please log in:</p>
       <button class="button button-full button-positive" ng-click="vm.login()">
         Log In
       </button>
     </div>
-    <div ng-show="vm.auth.isAuthenticated">
+    <div ng-show="isAuthenticated">
 
       <div class="list card">
 
@@ -15,6 +15,7 @@
           <h2>{{ vm.profile.name }}</h2>
           <span ng-if="vm.profile.country" class="additional-info">Country (added by rule): <strong>{{ vm.profile.country }}</strong></span>
         </div>
+
         <a class="item item-icon-left assertive" ng-click="vm.logout()">
           <i class="icon ion-log-out"></i> Log Out
         </a>
