--- a/02-Custom-Login/www/components/home/home.html
+++ b/02-Custom-Login/www/components/home/home.html
@@ -3,7 +3,7 @@
     <div ng-hide="isAuthenticated">
       <p>Welcome to the Auth0 Ionic Sample! Please log in:</p>
       <button class="button button-full button-positive" ng-click="vm.login()">
-        Log In
+        Log In/Sign Up
       </button>
     </div>
     <div ng-show="isAuthenticated">
