--- a/02-Custom-Login/www/components/login/login.html
+++ b/02-Custom-Login/www/components/login/login.html
@@ -9,6 +9,7 @@
       </label>
     </div>
     <button class="button button-block button-calm" ng-click="vm.login()">Login</button>
+    <button class="button button-block button-calm" ng-click="vm.signup()">Signup</button>
     <button class="button button-block button-google icon ion-social-googleplus-outline" ng-click="vm.loginWithGoogle()">
       Login with Google
     </button>
