Disable caching of profile view

--- a/01-Login/www/templates/tab-profile.html
+++ b/01-Login/www/templates/tab-profile.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Profile">
+<ion-view cache-view="false" view-title="Profile">
   <ion-content class="padding">
     <div ng-if="!auth.isAuthenticated()">
       <p>Please log in to view your profile.</p>
